--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "my-project-name",
   "version": "0.1.0",
   "devDependencies": {
+    "assemble": "^0.4.42",
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0",
-    "grunt-mustache-render": "^1.6.0"
+    "grunt-mustache-render": "^1.6.0",
+    "grunt-newer": "^0.8.0",
+    "grunt-verb": "^0.2.4"
   }
 }
