--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "assemble": "^0.4.42",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compass": "^1.0.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-mustache-render": "^1.6.0",
     "grunt-newer": "^0.8.0",
     "grunt-verb": "^0.2.4"
